es-derive2-test/tests/ui/errors/missing_quotes_in_path.rs
// Error: Forgot quotes around field path
#[derive(es_derive2::InjectableEvent)]
#[es(idempotency = [user.id], correlation = ["user.id"])]
pub struct MyEvent {
    pub user: User,
}

pub struct User {
    pub id: String,
}

fn main() {}
