es-derive2-test/tests/ui/errors/missing_quotes_in_path.stderr
error: expected string literal

       Example usage:
         #[derive(InjectableEvent)]
         #[es(awaits = [PaymentResponse], idempotency = ["user.id"], correlation = ["transaction_id"], status = { exists })]
         pub struct PaymentRequested { ... }

 --> tests/ui/errors/missing_quotes_in_path.rs:3:21
  |
3 | #[es(idempotency = [user.id], correlation = ["user.id"])]
  |                     ^^^^
